@@ -39,6 +39,7 @@ requests from users, including:
   Lucia Hindorff
   Jeffery Hughes
   Beat Hulliger
+  Lauren Kennedy
   Ward Kinkade
   Stas Kolenikov
   Franziska Kößler
@@ -69,6 +70,7 @@ requests from users, including:
   Steve Roberts
   Andrew Robinson
   Mark Rosenstein
+  Dan Simpson
   Pam Shaw
   Lee Sieswerda
   Phil Smith
